# movie-studio-agent

./: .gitignore  README.md  cloudbuild.adkweb.yaml  cloudbuild.studio.yaml
docs/: agentic-studio-series.html  agentic-studio-series.md  index.html  mcp-and-skills.md  part-1-thesis.html  part-1-thesis.md  part-3-moat.html  part-3-moat.md  pre-production-barrier.html  pre-production-barrier.md
movie/: .dockerignore  Dockerfile  film_grammar.py  imagegen.py  movie_server.py  movie_store.py  musicgen.py  pyproject.toml  test_local.py  videogen.py
movie/skills/film-director/: SKILL.md
movie/skills/film-director/references/: camera-language.md  continuity-rules.md  shot-patterns.md
movie/skills/film-editor/: SKILL.md
movie/skills/film-editor/references/: review-rubric.md
movie/skills/script-developer/: SKILL.md
movie/skills/script-developer/references/: clarifying-questions.md  script-parsing.md
movie_agent/: Dockerfile  agent.py  pyproject.toml  run.py
movie_studio/: Dockerfile  README.md  app.py  pyproject.toml
movie_studio/static/: app.js  index.html  style.css
